--- a/react-folio/src/App.css
+++ b/react-folio/src/App.css
@@ -7,6 +7,7 @@
 }
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -85,6 +86,16 @@
 
 }
 
+.aboutme {
+  margin-top: 100px;
+  padding-left: 150px;
+  padding-right: 150px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  color: var(--secondary);
+
+}
+
 .portfolio {
   margin-top: 100px;
   font-family: 'Times New Roman', Times, serif;
@@ -93,8 +104,21 @@
 
 }
 
+.resume {
+  margin-top: 100px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  color: var(--secondary);
+
+}
+
+.resume-picture {
+  max-width: 450px;
+}
+
 .footer {
-  position: absolute;
+  width: 100%;
+  position: fixed;
   bottom: 0px;
   margin: 0;
   padding-left: 20px;
