--- a/react-folio/src/App.css
+++ b/react-folio/src/App.css
@@ -7,6 +7,7 @@
 }
 .App {
   text-align: center;
+  margin-bottom: 50px;
 
 }
 
@@ -112,19 +113,43 @@
 
 }
 
+.profile-picture {
+    max-width: 450px;
+    border-radius: 50%;
+    border: 10px var(--primary) solid;
+
+}
+
 .resume-picture {
   max-width: 450px;
 }
 
 .footer {
   width: 100%;
-  position: fixed;
-  bottom: 0px;
-  margin: 0;
-  padding-left: 20px;
+  position: relative;
   padding-bottom: 0;
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
-  font-size: 20px;
+
+
+}
+
+.footer ul li {
+  list-style-type: none;
+  display: inline;
+  margin-left: 20px;
+
+
+}
+
+.footer a {
+  text-decoration: none;
+  padding-left: 10px;
   color: var(--secondary);
+
+}
+
+.footer a:hover {
+  color: var(--quarnary);
+
 }
