--- a/react-folio/src/App.css
+++ b/react-folio/src/App.css
@@ -97,6 +97,13 @@
 
 }
 
+.profile-picture {
+  max-width: 450px;
+  border-radius: 50%;
+  border: 10px var(--primary) solid;
+
+}
+
 .portfolio {
   margin-top: 100px;
   font-family: 'Times New Roman', Times, serif;
@@ -105,18 +112,26 @@
 
 }
 
+.row img {
+  width:  400px;
+  height: 250px;
+  padding: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+  object-fit: cover;
+  opacity: 0.5;
+  border-radius: 15%;
+}
+
+.row img:hover {
+  opacity: 1;
+}
+
 .resume {
   margin-top: 100px;
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
   color: var(--secondary);
-
-}
-
-.profile-picture {
-    max-width: 450px;
-    border-radius: 50%;
-    border: 10px var(--primary) solid;
 
 }
 
